--- a/diploma/predstavitev-dolga.tex
+++ b/diploma/predstavitev-dolga.tex
@@ -9,7 +9,7 @@
 
 \mode<presentation>
 {
-  \usetheme{Berlin}
+  \usetheme{default}
   \setbeamercovered{transparent}
 }
 
@@ -48,9 +48,7 @@
 
 \begin{frame}{Uvod v paralelizacijo}
     \begin{itemize}
-        \item Paralelizacija: tehnika za izvajanje več nalog hkrati.
-        \item Pohitri izračune, izboljša zmogljivost.
-        \item Pomembno pri velikih podatkovnih naborih in zahtevnih izračunih.
+        \item: Paralelizacija: Pohitritev zahtevnih izračunov
     \end{itemize}
     \begin{figure}
         \caption{Paralelni programi so z večanjem števila jeder hitrejši.}
@@ -63,19 +61,12 @@
 \begin{frame}{Paralelizacija v funkcijskih jezikih}
     \begin{itemize}
         \item Funkcijski jeziki: omogočajo enostavno paralelizacijo.
-        \item Visoka stopnja abstrakcije: zmanjšuje napake.
-        \item Imutabilnost: preprečuje težave z dostopom do spremenljivk.
-        \item Težave paralelizacije, ki s funkcijskimi jeziki izginejo: Spremenljivost spremenljivk, stranski učinki, težave s paralelizacijo pomnilnika.
-        \item Že implementirane funkcijske knjižnice za paralelizacijo (Haskell: Graphalyze, Scali: GraphX, F\#: Alea.cuBase).
+        \item Prednosti funkcijskih jezikov (hitrost, stranski učinki, paralelizabilnost, nespremenljivost, \dots)
     \end{itemize}
 \end{frame}
 
 \begin{frame}{Grafovski algoritmi}
-    \begin{itemize}
-        \item Grafi: pomembna struktura v računalništvu.
-        \item Grafovski algoritmi: rešujejo probleme, povezane z grafi.
-        \item Primeri: Najkrajša pot, raziskovanje grafa, iskanje krepko povezanih komponent, algoritmi za posebne grafe (npr. DAG-e).
-    \end{itemize}
+
 \end{frame}
 
 
@@ -84,29 +75,23 @@
 \begin{frame}[fragile]
     \frametitle{Izračun Fibonaccijevih števil}
     \begin{itemize}
-        \item Naivna implementacija Fibonaccijeve funkcije v jeziku OCaml:
+        \item Naivna implementacija Fibonaccijeve funkcije:
     \begin{verbatim}
     let rec fib n =
       if n < 2 then 1
       else fib (n-1) + fib (n-2)
     \end{verbatim}
-        \item Cilj: Pohitriti implementacijo, ki sicer potrebuje $O(n^2)$.
+        \item Cilj: Pohitriti (počasno) implementacijo.
     \end{itemize}
 \end{frame}
-    
 
 \begin{frame}
-    \frametitle{Pregled knjižnice Domainslib}
-    \begin{itemize}
-        \item \href{https://github.com/ocaml-multicore/domainslib}{Knjižnica Domainslib} - sočasna programska knjižnica za OCaml, ki omogoča paralelizacijo na procesorskem nivoju:
-        \begin{itemize}
-            \item Domene - niti, ki nam zagotavljajo sočasnost v OCaml-u. Nova domena: ~\texttt{Domainslib.make}
-            \item Paralelne naloge - naloge, ki se izvajajo v domenah. Nova naloga se ustvari z ~\texttt{Domainslib.Task.async} ter počaka z ~\texttt{Domainslib.Task.await}
-            \item Vzorci vzporednega računanja: ~\texttt{Domainslib.Parallel.map}, ~\texttt{Domainslib.Parallel.For}, \dots
-            \item Sinhronizacijski mehanizmi: ~\texttt{Domainslib.Sync}, ~\texttt{Domainslib.Sync.Event}, \dots
-            \item Izravnavanje obremenitve med domenami
-        \end{itemize}
-    \end{itemize}
+  \frametitle{Časovna zahtevnost takega računanja $fib(n)$}
+  \begin{figure}
+      \centering
+      \includegraphics[width=9cm]{slike/casovna_zahtevnost_racunanja_fib.png}
+      \label{fig:casovna_zahtevnost_racunanja_fib}
+    \end{figure}
 \end{frame}
 
 \begin{frame}[fragile]
@@ -114,8 +99,7 @@
     \begin{itemize}
         \item Težava: Preveliko število vzporednih niti
         \item Ideja: Paralelizacija najbolj časovno zahtevnih delov kode
-        \item Uporaba Domainslib za paralelizacijo v OCamlu (implementacija na tem naslovu 
-        \href{https://github.com/tjazerzen/parallelisation-of-graph-algorithms-in-functional-programming-languages/blob/parallel_fibonacci/playground/graph/fib.ml}{tem naslovu}):
+        \item (\href{https://github.com/tjazerzen/parallelisation-of-graph-algorithms-in-functional-programming-languages/blob/parallel_fibonacci/playground/graph/fib.ml}{povezava do implementacije}):
     \begin{verbatim}
 module T = Domainslib.Task
 let rec fib n = 
@@ -150,41 +134,23 @@ let rec fib_par pool n =
         \label{fig:fib_par_v_odvisnosti_od_n}
       \end{figure}
 \end{frame}
-    
+
+\begin{frame}
+  \frametitle{Preostale (glavne) funkcionalnosti knjižnice Domainslib}
+  \begin{itemize}
+        \item Inicializacija domene: ~\texttt{Domainslib.make}
+        \item Definicija paralelnih nalog: ~\texttt{Domainslib.Task.async}, ~\texttt{Domainslib.Task.await}
+        \item Vzorci vzporednega računanja: ~\texttt{Domainslib.Parallel.map}, ~\texttt{Domainslib.Parallel.For}
+        \item Sinhronizacijski mehanizmi: ~\texttt{Domainslib.Sync}, ~\texttt{Domainslib.Sync.Event}, \dots
+        \item Izravnavanje obremenitve med domenami
+      \end{itemize}
+\end{frame}
     
 
 \section{Prestavitev grafa v funkcijskem jeziku}
 
-\begin{frame}{Načini predstavitve grafa}
-    V svoji diplomski grafe predstavim na dva načina:
-    \begin{enumerate}
-    \item Imperativna predstavitev grafa (spr. podatkovne strukture): Vozlišča hranimo v tabeli, povezave pa v matriki sosednosti
-    \item Funkcijska predstavitev grafa (nespr. podatkovne strukture): \texttt{map}, \texttt{IntSet}, \texttt{NodeMap}, \dots
-    \end{enumerate}
-\end{frame}
-
-
 \begin{frame}[fragile]
-    \frametitle{Imperativna predstavitev grafa}
-    \begin{verbatim}
-    type 'a node = {
-      created_time: float;
-      id: int;
-      value: 'a;
-    }
-    
-    type 'a graph = {
-      nodes: ('a node Option.t) Array.t;
-      adjacency_list: IntSet.t Array.t;
-      is_directed: bool;
-      node_count: int;
-    }
-    \end{verbatim}
-    \href{https://github.com/tjazerzen/parallelisation-of-graph-algorithms-in-functional-programming-languages/blob/predstavitev_grafa_z_arrayi_ter_mnozicami/playground/graph/graph.ml}{[link do implementacije]}.
-\end{frame}
-
-\begin{frame}[fragile]
-    \frametitle{Funkcijska predstavitev grafa}
+    \frametitle{Prestavitev grafa v funkcijskem jeziku}
 \begin{verbatim}
 module Node = struct
     type elt = int
@@ -200,41 +166,12 @@ module Graph = struct
     ...
 end
     \end{verbatim}
+    \begin{itemize}
+      \item Implementacija množic z uteženimi drevesi
+    \end{itemize}
         
     \href{https://github.com/tjazerzen/parallelisation-of-graph-algorithms-in-functional-programming-languages/blob/master/playground/graph/graph.ml}{[link do implementacije]}.
 \end{frame}
-
-\begin{frame}
-    \frametitle{Prednosti in slabosti}
-    Prednosti in slabosti obeh predstavitev:
-    \begin{itemize}
-    \item Imperativna predstavitev: Bolj znana ter intuitivna, tipično hitrejša za večje grafe, vendar v nasprotju s filozofijo funkcijskega programiranja.
-          Težja za paralelno izvajanje.
-    \item Funkcijska predstavitev: V skladu z vzorci funkcijskega programiranja, lažje za paralelno izvajanje.
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{Primerjava časovnih zahtevnosti grafovskih operacij med implementacijama}
-
-    \begin{table}
-      \centering
-      \footnotesize
-      \begin{tabular}{|c|c|c|}
-      \hline
-      \textbf{Operacija / implementacija} & \textbf{Spremenljive p.s.} & \textbf{Nespremenljive p.s.} \\ \hline
-      \textbf{Dodajanje vozlišča} & $O(\log |V|)$ & \underline{$O(1_{amort.})$} \\ \hline
-      \textbf{Odvzemanje vozlišča} & $O(|V| \log |V|)$ & \underline{$O(|V|)$} \\ \hline
-      \textbf{Dodajanje povezave} & \underline{$O(\log |V|)$} & $O(|V| + |E|)$ \\ \hline
-      \textbf{Odvzemanje povezave} & \underline{$O(\log |V|)$} & \underline{$O(\log |V|)$} \\ \hline
-      \textbf{Soseščina($u$)} & \underline{$O(deg_Gu + \log |V|)$} & \underline{$O(deg_Gu + \log |V|)$} \\ \hline
-      \end{tabular}
-      \caption{Primerjava časovnih kompleksnosti operacij na grafu med različnima implementacijama. Podčrtana je tista 
-      implementacija, ki je za dano metodo boljša.}
-      \label{tab:primerjava_casovnih_kompleksnosti_operacij_na_grafu_med_razlicnima_implementacijama}
-    \end{table}
-    
-\end{frame}
-    
 
 \section{Paralelno iskanje v širino (PBFS)}
 
